# z-audio

./: .gitignore  CMakeLists.txt  README.md  actionPlan  container.cpp  my_play  play  play.cpp  player.cpp  player.hpp  playerV0.cpp  playlist
lib/sfml_lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
